Wed Nov 11 04:18:57 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: fix buglet with making GLIB_LIBS (shouldn't have
	been tripped, but bug nevertheless)

Wed Nov 11 02:27:46 CET 1998 Marc Lehmann <pcg@goof.com>

	* libgimp/gimp.c (gimp_run_procedure2): fixed a memory leak,
	(gimp_destroy_paramdefs) new function.
	* libgimp/gimp.h (gimp_destroy_paramdefs): added header. 
	* libgimp/gimpfeatures.h.in (GIMP_HAVE_DESTROY_PARAMDEFS): new macro.
	* plug-ins/script-fu/script-fu.c (init_procedures): fixed a
	big memory leak (this also applied to perl!)

Tue Nov 10 23:44:07 MET 1998 Sven Neumann <sven@gimp.org>

	* libgimp/gimpmatrix.[ch]
	* app/transform_core.c: minimal speedup 

	* app/scale_tool.c: Use transform_core_do() for scaling too.
	This gives a consistent behaviour regarding the corrective transform
	and seems to be faster anyway...

Mon Nov  9 16:20:33 MET 1998 Sven Neumann <sven@gimp.org>

	* app/session.c: use gdk_window_get_root_origin to get the window
	position

	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/scripts/test-sphere.scm: small cosmetic fixes  
	
Sun Nov  8 17:51:52 PST 1998 Manish Singh <yosh@gimp.org>

	* Makefile.am
	* README.i18n: new file, explains i18n stuff

	* plug-ins/script-fu/scripts/(lots of files): applied
	gimp-ruth-981108-0, use nice SF-FONT and SF-FILENAME stuff

	* plug-ins/png/png.c: applied gimp-ruth-981108-1, fixes loader for
	some indexed pngs. Also default to level 6 compression, level 9
	compression is cpu hungry and isn't much of a win compared to 6.

	* plug-ins/tiff/tiff.c: applied gimp-ruth-981108-2, major tiff
	rework

1998-11-08  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in (sendmail_path): Prefer /usr/sbin/sendmail to
	/usr/lib/sendmail. 

1998-11-07  Jay Cox  <jaycox@earthlink.net>

	* libgimp/{gimp.h, gimpchannel.c, gimpdrawable.c, gimplayer.c}:
	export the tattoo functions to the plug-ins
	
	* libimp/gserialize.c, libimp/gserialize.h: new files for 
	serializing structures
	